# tap-pinterest

./: .env.example  .gitignore  CLAUDE.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_pinterest/: __init__.py  __main__.py  auth.py  client.py  openapi.json  streams.py  tap.py
tests/: __init__.py  test_core.py
